FC-105 - [fortress-core]